viewController pass the step value to the stepper properly

--- a/ObjCTableviewAndDelegatesAssignment/Base.lproj/Main.storyboard
+++ b/ObjCTableviewAndDelegatesAssignment/Base.lproj/Main.storyboard
@@ -79,16 +79,20 @@
                         <subviews>
                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" maximumValue="100" stepValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="hqc-Vv-FZe">
                                 <rect key="frame" x="160" y="178" width="94" height="32"/>
+                                <connections>
+                                    <action selector="doStep:" destination="x7E-dH-9am" eventType="valueChanged" id="qtT-Zu-bqZ"/>
+                                </connections>
                             </stepper>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IPi-me-Tcb">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IPi-me-Tcb">
                                 <rect key="frame" x="10" y="94" width="394" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ltv-uI-1XI">
-                                <rect key="frame" x="184" y="270" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="159" y="270" width="96" height="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Save &amp; Back"/>
                                 <connections>
                                     <action selector="save:" destination="x7E-dH-9am" eventType="touchUpInside" id="qPJ-uq-bGv"/>
                                 </connections>
